# humanoid-head

./: .gitignore  Milestones.md  Pełne_założenia.md  README.md  Stack.md  algoritm.py  dokumentacja.md  find_room.py  info.json  monday.json  nlp_pipeline.py  pyproject.toml  teachers_info.py  weather.py
.github/workflows/: codeql.yml
