[project]
name = "humanoid-head"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "langchain-core>=1.2.17",
    "langchain-ollama>=1.0.1",
    "openai-whisper>=20250625",
    "pyaudio>=0.2.14",
    "python-weather>=2.1.2",
    "pyttsx3>=2.99",
    "requests>=2.32.5",
    "speechrecognition>=3.14.5",
]
